content overflow fixed

--- a/Projects/Farmers-WebApp/static/info2.css
+++ b/Projects/Farmers-WebApp/static/info2.css
@@ -230,6 +230,7 @@ select {
   width: 100%;
   max-width: 980px;
   margin: 20px;
+  flex-direction: column;
   background-color: #fff;
   /* background-color: #16bbaa; */
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
